# beetflo-terminal

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.rs
examples/: custom_widget.rs
examples/support/: mod.rs
lib/beets/: CMakeLists.txt
lib/beets/src/: beets.c
resources/: beetflo.desktop
src/: beets.c  lib.rs  main.rs
src/backend/: mod.rs
src/layouts/: basic_top_down_layout.rs  mod.rs
src/midi/: message.rs  mod.rs  note.rs  reader.rs
src/surface/: canvas.rs  core.rs  mod.rs  update.rs  window.rs
src/theme/: mod.rs
src/utils/: environment.rs  mod.rs
src/widgets/: .#piano.rs  mod.rs  piano.rs  track_overview.rs
src/widgets/piano/: keys.rs  mod.rs
