[package]
authors = ["Bailey Cosier <bailey.cosier@gmail.com>"]
build = "build.rs"
name = "beetflo"
version = "0.1.0"

[[bin]]
name = "beetflo"
path = "src/main.rs"

[build-dependencies]
cmake = "0.1.24"
ctest = "0.1"
gcc = "0.3"
pkg-config = "0.3.9"

[dependencies]
clap = "2.19"
env_logger = "0.3"
find_folder = "0.3.0"
log = "0.3"
rayon = "0.8.1"

image = "0.13.0"
rand = "0.3.13"
# glutin_gfx.rs example dependencies
gfx = "0.15.1"
gfx_core = "0.7.0"
gfx_window_glutin = "0.15.0"
glutin = "0.7.0"
# piston_window.rs example dependencies
piston_window = "0.65.0"

# android_ffi = { git = "https://github.com/cosier/android-ffi-rs" }
# android_support = { git = "https://github.com/cosier/android-support-rs" }

[dependencies.android_ffi]
path = "./vendor/android-ffi"

[dependencies.android_support]
path = "./vendor/android-support"

[dependencies.midir]
path = "./vendor/midir"

[dependencies.conrod]
features = ["glium", "winit"]
path = "./vendor/conrod"

[dependencies.conrod_derive]
path = "./vendor/conrod/conrod_derive"

[features]
glium = ["conrod/glium"]
winit = ["conrod/winit"]