[package]
authors = ["Bailey Cosier <bailey.cosier@gmail.com>"]
build = "build.rs"
name = "beetflo"
version = "0.1.0"

[[bin]]
name = "beetflo"
path = "src/main.rs"

[build-dependencies]
pkg-config = "0.3.9"
cmake = "0.1.24"
ctest = "0.1"
gcc = "0.3"

[dependencies]
find_folder = "0.3.0"
env_logger = "0.3"
rayon = "0.8.1"
image = "0.13.0"
rand = "0.3.13"
clap = "2.19"
log = "0.3"

# glutin_gfx.rs example dependencies
gfx_window_glutin = "0.15.0"
gfx_core = "0.7.0"
glutin = "0.7.0"
gfx = "0.15.1"

# piston_window.rs example dependencies
piston_window = "0.65.0"

[dependencies.android_ffi]
# path = "./vendor/android-ffi"
version = "*"

[dependencies.android_support]
# path = "./vendor/android-support"
version = "*"

[dependencies.midir]
path = "./vendor/midix"

[dependencies.conrod]
features = ["glium", "winit"]
path = "./vendor/conrod"

[dependencies.conrod_derive]
path = "./vendor/conrod/conrod_derive"

[features]
glium = ["conrod/glium"]
winit = ["conrod/winit"]
